--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       font-family: 'Roboto', sans-serif;
     }
   </style>
-  <title>Trivia App</title>
+  <title>KBC Trivia App</title>
 </head>
 
 <body>
